--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body{
 
 /* Jumbotron section */
 .jumbotron {
-    background-image: url(images/carousel_maze_3.jpeg);
+    background-image: url(https://877trainride.com/img/carousel/carousel_maze_3.jpg);
     background-size: cover;
     height: 800px;
     text-align: center;
@@ -102,7 +102,7 @@ h4{
     font-family: 'Henny Penny', cursive;
 }
 .jumbotron2{
-    background-image: url(images/2109504399spider-webs-gif.gif);
+    background-image: url(/images/2109504399spider-webs-gif.gif);
     background-size: cover;
     height: 100vh;
 }
