--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ h4{
     font-family: 'Henny Penny', cursive;
 }
 .jumbotron2{
-    background-image: url(/images/2109504399spider-webs-gif.gif);
+    background-image: url(https://bestanimations.com/media/spiders/2109504399spider-webs-gif.gif);
     background-size: cover;
     height: 100vh;
 }
